<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:minHeight="@dimen/line_min_height"
        android:text="@string/select_avatar"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#9e9e9e" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="?android:attr/dividerVertical" />

    <TextView
        android:id="@+id/pick_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:minHeight="@dimen/line_min_height"
        android:text="@string/from_photo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#323232" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="?android:attr/dividerVertical" />

    <TextView
        android:id="@+id/capture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:minHeight="@dimen/line_min_height"
        android:text="@string/capture"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#323232" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#fff" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:minHeight="@dimen/line_min_height"
        android:text="@string/action_cancel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#555" />
</LinearLayout>