<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6911a5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#440067"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <ImageButton
                android:id="@+id/close"
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fw_close" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="@string/forget_password_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/forget_password_tip"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#fff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_login_phone"
                    android:hint="@string/input_phone_hint"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#fff"
                    android:textColorHint="#c7c7c7" />

                <ImageButton
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:padding="10dp"
                    android:src="@drawable/ic_login_clear"
                    android:visibility="invisible" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="#7929b0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/smsCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_sms_code"
                    android:hint="@string/input_sms_code"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#fff"
                    android:textColorHint="#c7c7c7" />

                <View
                    android:layout_width="1px"
                    android:layout_height="32dp"
                    android:background="#7929ae" />

                <Button
                    android:id="@+id/sendSmsCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="end|center_vertical"
                    android:minWidth="92dp"
                    android:padding="10dp"
                    android:text="@string/fetch_sms_code"
                    android:textColor="#cbbada" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="#7929b0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/pw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_login_pw"
                    android:hint="@string/input_pw_hint"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#fff"
                    android:textColorHint="#c7c7c7" />

                <ImageButton
                    android:id="@+id/showPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:padding="10dp"
                    android:src="@drawable/password" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="#7929b0" />

            <Button
                android:id="@+id/complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="60dp"
                android:background="@drawable/common_button"
                android:orientation="horizontal"
                android:text="@string/action_complete"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>